@@ -1,5 +1,12 @@
 2013-05-13  Dario Rodriguez <dario@artica.es>
 
+	* integria_db.sql,
+	godmode/grupos/configurar_grupo.php,
+	godmode/grupos/lista_grupos.php: Restored default inventory object in
+	groups.
+
+2013-05-13  Dario Rodriguez <dario@artica.es>
+
 	* include/functions_incidents.php: Fixed several bugs with visual styles of PDF
 	and HTML view.
 
